Fixed a bug that made the popup windows overflow

--- a/client/src/global-styles/notebook-sheet.css
+++ b/client/src/global-styles/notebook-sheet.css
@@ -1,4 +1,7 @@
 .notebook-sheet {
+    display: flex;
+    flex-direction: column;
+
     position: relative;
 
     max-width: 95vw;
